Feat: Test para Register restaurant de RestaurantController